版本：0.4.0 修复了部分已知问题